--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,19 @@
       <artifactId>jersey-media-json-jackson</artifactId>
       <version>2.25.1</version>
     </dependency>
+    
+
+	<dependency>
+	    <groupId>org.apache.kafka</groupId>
+	    <artifactId>kafka-clients</artifactId>
+	    <version>1.1.0</version>
+	</dependency>
+	
+	<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+	</dependency>
 	
   </dependencies>
 
