--- a/manifest.yml
+++ b/manifest.yml
@@ -5,5 +5,6 @@ applications:
   host: PracticaFinalASR
   domain: eu-gb.mybluemix.net
   buildpack: java_buildpack
+  path: target/PracticaFinalASR.war
   services:
   - prueba1
