--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
     <version>1.2.17</version>
 	</dependency>
 	
+	<dependency>
+		  <groupId>com.cloudant</groupId>
+		  <artifactId>cloudant-client</artifactId>
+		  <version>2.12.0</version>
+	</dependency>
+	
   </dependencies>
 
   <build>
