--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,14 @@
 								<version>2.8.4</version>
 					 </dependency>
 
+					 <!-- https://mvnrepository.com/artifact/jstl/jstl -->
+					 <dependency>
+								<groupId>jstl</groupId>
+								<artifactId>jstl</artifactId>
+								<version>1.2</version>
+					 </dependency>
+
+
 
 
 		  </dependencies>
