--- a/src/main/resources/producer.properties
+++ b/src/main/resources/producer.properties
@@ -5,7 +5,7 @@ client.id=kafka-java-console-sample-producer
 #
 security.protocol=SASL_SSL
 sasl.mechanism=PLAIN
-sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="USERNAME" password="PASSWORD";
+sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="ToMM873rB0nmgldX" password="ovJ9B2cwUgbRKTxvsQjVf6pwTIkGCbZF";
 ssl.protocol=TLSv1.2
 ssl.enabled.protocols=TLSv1.2
 ssl.endpoint.identification.algorithm=HTTPS
@@ -13,3 +13,16 @@ ssl.endpoint.identification.algorithm=HTTPS
 # please read the Kafka docs about this setting
 acks=-1
 
+bootstrap.servers=[
+    "kafka02-prod02.messagehub.services.eu-gb.bluemix.net:9093",
+    "kafka04-prod02.messagehub.services.eu-gb.bluemix.net:9093",
+    "kafka01-prod02.messagehub.services.eu-gb.bluemix.net:9093",
+    "kafka03-prod02.messagehub.services.eu-gb.bluemix.net:9093",
+    "kafka05-prod02.messagehub.services.eu-gb.bluemix.net:9093"
+  ]
+producer.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="ToMM873rB0nmgldX" password="ovJ9B2cwUgbRKTxvsQjVf6pwTIkGCbZF";
+producer.security.protocol=SASL_SSL
+producer.sasl.mechanism=PLAIN
+producer.ssl.protocol=TLSv1.2
+producer.ssl.enabled.protocols=TLSv1.2
+producer.ssl.endpoint.identification.algorithm=HTTPS
